--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #5F74FB;
+    font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
+}
