--- a/src/app/slider/dashboard/dashboard.component.html
+++ b/src/app/slider/dashboard/dashboard.component.html
@@ -1,10 +1,14 @@
 <div class="dashboard">
   <div class="inputs">
-    <div>
-      <input #sizeInput type="number" placeholder="Size (50-250)"/>
+    <div class="input-wrapper">
+      <input #sizeInput type="number" placeholder="Size (50-250)" />
+      <div class="postfix"></div>
     </div>
-    <div>
-      <input #radiusInput type="number" placeholder="Border Radius"/>
+    <div class="input-wrapper">
+      <input #radiusInput type="number" placeholder="Border Radius" />
+      <div class="postfix" [ngStyle]="{ borderLeft: '1px solid #ccc' }">
+        <div>px</div>
+      </div>
     </div>
   </div>
 
