--- a/src/app/slider/window/window.component.html
+++ b/src/app/slider/window/window.component.html
@@ -1,14 +1,14 @@
 <div class="window">
   <div
-    *ngFor="let image of images | async; index as i"
+    *ngFor="let image of images$ | async; index as i"
     class="image"
     [ngStyle]="
       getImageStyles(
         image,
         i,
-        imageSize | async,
-        imageRadius | async,
-        imageIndex | async
+        imageSize$ | async,
+        imageRadius$ | async,
+        imageIndex$ | async
       )
     "
   ></div>
