--- a/src/app/slider/dashboard/dashboard.component.scss
+++ b/src/app/slider/dashboard/dashboard.component.scss
@@ -1,7 +1,7 @@
 .dashboard {
   margin: 100px 60px;
   & .inputs {
-      margin-bottom: 20px;
+    margin-bottom: 20px;
   }
 }
 
@@ -49,12 +49,12 @@ button {
   }
 
   &:focus {
-    outline: none; 
+    outline: none;
   }
 }
 
 .prev-next {
-  margin-top: 10px;  
+  margin-top: 10px;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -63,25 +63,25 @@ button {
 }
 
 .input-wrapper {
-    display: flex;
+  display: flex;
 }
 
 .postfix {
-    background-color: white;
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    margin-bottom: 10px;
-    display: flex;
-    border-top-right-radius: 3px;
-    border-bottom-right-radius: 3px;
-}
+  background-color: white;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  margin-bottom: 10px;
+  display: flex;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
 
-.postfix > div{
+  & div {
     line-height: 40px;
     width: 100%;
     text-align: center;
     font-weight: 700;
     vertical-align: middle;
     color: #ccc;
+  }
 }
